Fix recipe modal overflow bug

--- a/src/components/Recipe/Recipe.css
+++ b/src/components/Recipe/Recipe.css
@@ -41,7 +41,11 @@
 
 .recipe-modal-recipe-container{
     display: flex;
+    width: 100%;
+    height: 100%;
+    word-wrap: break-word;
     flex-direction: column;
+    overflow: auto;
     gap: 16px;
 }
 
